# dsp-core

./: CMakeLists.txt  README.md
docs/: curve-fitting-enhancements-summary.md  layered-transfer-function.md  seamless-transfer-function.md  spline-algorithm-decision.md  spline-curve-fitting.md  spline-layer-refactoring-notes.md  spline-optimization-history.md
dsp_core/: dsp_core.cpp  dsp_core.h
dsp_core/Source/: AudioHistoryBuffer.cpp  AudioHistoryBuffer.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  HarmonicLayer.cpp  HarmonicLayer.h  LayeredTransferFunction.cpp  LayeredTransferFunction.h  SeamlessTransferFunction.cpp  SeamlessTransferFunction.h  SeamlessTransferFunctionImpl.cpp  SeamlessTransferFunctionImpl.h  SplineLayer.cpp  SplineLayer.h  SplineTypes.h  StereoHistoryBuffer.cpp  StereoHistoryBuffer.h  TransferFunction.cpp  TransferFunction.h  exprtk.hpp
dsp_core/Source/Services/: AdaptiveToleranceCalculator.cpp  AdaptiveToleranceCalculator.h  CoordinateSnapper.cpp  CoordinateSnapper.h  CurveFeatureDetector.cpp  CurveFeatureDetector.h  SplineEvaluator.cpp  SplineEvaluator.h  SplineFitter.cpp  SplineFitter.h  SymmetryAnalyzer.cpp  SymmetryAnalyzer.h  TransferFunctionOperations.cpp  TransferFunctionOperations.h  ZeroCrossingSolver.cpp  ZeroCrossingSolver.h
dsp_core/Source/audio_pipeline/: AudioInputBuffer.h  AudioPipeline.cpp  AudioPipeline.h  AudioPipelineBuilder.h  AudioProcessingStage.h  BiasFadeController.h  DCBlockingFilter.cpp  DCBlockingFilter.h  DCOffsetCompensator.cpp  DCOffsetCompensator.h  DryWetMixStage.cpp  DryWetMixStage.h  DynamicOutputBiasing.cpp  DynamicOutputBiasing.h  GainStage.cpp  GainStage.h  InputPeakTracker.h  OversamplingWrapper.cpp  OversamplingWrapper.h  PeakEnvelopeDetector.h  SilenceDetector.cpp  SilenceDetector.h  SoftClippingStage.cpp  SoftClippingStage.h  StageHandles.h  WaveshapingStage.cpp  WaveshapingStage.h
dsp_core/Source/engine/: SeamlessTransferFunction.cpp  SeamlessTransferFunction.h  SeamlessTransferFunctionImpl.cpp  SeamlessTransferFunctionImpl.h
dsp_core/Source/model/: HarmonicLayer.cpp  HarmonicLayer.h  LayeredTransferFunction.cpp  LayeredTransferFunction.h  SplineLayer.cpp  SplineLayer.h  SplineTypes.h  TransferFunction.cpp  TransferFunction.h
dsp_core/Source/pipeline/: AudioInputWriter.h  AudioPipeline.cpp  AudioPipeline.h  AudioPipelineBuilder.cpp  AudioPipelineBuilder.h  AudioProcessingStage.h  DCBlockingFilter.cpp  DCBlockingFilter.h  DryWetMixStage.cpp  DryWetMixStage.h  GainStage.cpp  GainStage.h  InputPeakTracker.h  OversamplingWrapper.cpp  OversamplingWrapper.h  WaveshapingStage.cpp  WaveshapingStage.h
dsp_core/Source/primitives/: Decibels.h  Gain.h  IIRFilter.h  LockFreeFIFO.h  MathUtils.h  Oversampling.h  SmoothedValue.h
dsp_core/Source/services/: AdaptiveToleranceCalculator.cpp  CoordinateSnapper.cpp  CoordinateSnapper.h  CurveFeatureDetector.cpp  SplineEvaluator.cpp  SplineEvaluator.h  SplineFitter.cpp  SplineFitter.h  SymmetryAnalyzer.cpp  TransferFunctionOperations.cpp  TransferFunctionOperations.h
dsp_core/Source/structures/: AudioHistoryBuffer.cpp  AudioInputBuffer.h
dsp_utils/: dsp_utils.cpp  dsp_utils.h
dsp_utils/Source/: AudioHistoryBuffer.cpp  AudioHistoryBuffer.h  CircularAudioBuffer.cpp  CircularAudioBuffer.h
tests/: AdaptiveToleranceTest.cpp  AdaptiveToleranceTest.cpp.bak  AlgorithmBenchmarkTest.cpp  AnchorClusteringAnalysisTest.cpp  AnchorEfficiencyMetricsTest.cpp  AudioEngineTest.cpp  AudioPipelineBuilderTest.cpp  CMakeLists.txt  CoordinateSnapperTest.cpp  CurveFeatureDetectorTest.cpp  DCBlockingFilterTest.cpp  DCOffsetCompensatorTests.cpp  DecibelsTest.cpp  DryWetMixStageTest.cpp  DynamicOutputBiasingTest.cpp  ExtremaQualityMetricsTest.cpp  FeatureDetectionDiagnosticTest.cpp  FeatureDetectorDebugTest.cpp  GainStageTest.cpp  GainTest.cpp  Harmonic40ProductionTest.cpp  HarmonicAnchorDistributionTest.cpp  IIRFilterTest.cpp  InputPeakTrackerTest.cpp  LayeredTransferFunctionSplineTest.cpp  LayeredTransferFunctionTest.cpp  LocalDensityConstraintTest.cpp  LockFreeFIFOTest.cpp  OversamplingABTest.cpp  OversamplingTest.cpp  SeamlessTransferFunctionDiagnosticTest.cpp  SeamlessTransferFunctionPerformanceTest.cpp  SmoothedValueTest.cpp  SoftClippingComparisonTest.cpp  SplineEvaluatorTest.cpp  SplineFitterExactExtremaTest.cpp  SplineFitterIntegrationTest.cpp  SplineFitterIntegrationTest.cpp.bak2  SplineFitterTest.cpp  SplineLayerTest.cpp  (+5 more)
